# SpeakToMe

./: AI.cpp  AI.h  Answer.cpp  Answer.h  CMakeLists.txt  Dialogue.cpp  Dialogue.h  GameState.h  LICENSE  README.md  main.c  main.cpp
